# workspace-config-service

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/workspace_config_service/: __init__.py
tests/: test_workspace_config_service.py
