[tool.poetry]
name = "workspace_config_service"
version = "1.0.0"
description = "This is the workspace configuration service to serve the base framework]"
authors = ["ITT DBS"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
